--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,10 @@
     "api/index.php": { "runtime": "vercel-php@0.6.0"}
 },
 "routes": [
-    
+    {
+        "src": "/api/(.*)",
+        "dest": "/api/index.php"
+    },
     {
         "src": "/(.*)",
         "dest": "/api/index.php"
