--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,14 @@
 },
 "routes": [
     {
-        "src": "/api/(.*)",
+        "src": "/(.*)",
         "dest": "/api/index.php"
     },
     {
         "src": "/(.*)",
-        "dest": "/api/index.php"
+        "dest": "public/index.php"
     }
+    
 ],
 
 "env": {
